<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/pbCreditCardLoadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/pb_loading_size"
            android:layout_height="@dimen/pb_loading_size"
            android:indeterminate="true"/>
    </RelativeLayout>

    <LinearLayout style="@style/btn_container_icon">

        <ImageView
            style="@style/btn_form_icon"
            android:id="@+id/ivCreditCardIcon"
            android:src="@drawable/ic_default"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            style="@style/btn_text_input_layout"
            android:id="@+id/etCreditCardNameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false"
            android:labelFor="@+id/etCreditCardName"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">

            <EditText
                style="@style/btn_edit_text_field"
                android:id="@+id/etCreditCardName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="false"
                android:focusableInTouchMode="true"
                android:hint="@string/btn_credit_card_name_hint"
                android:inputType="text"
                android:maxLength="100"
                android:nextFocusDown="@+id/etCreditCardNumber"
                android:selectAllOnFocus="false"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/btn_container_no_icon"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            style="@style/btn_text_input_layout"
            android:id="@+id/etCreditCardNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:labelFor="@+id/etCreditCardNumber"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">
            <EditText
                style="@style/btn_edit_text_field"
                android:id="@+id/etCreditCardNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/btn_credit_card_number_hint"
                android:inputType="number"
                android:maxLength="20"
                android:nextFocusDown="@+id/etCreditCardExpiry"
                android:selectAllOnFocus="false"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout style="@style/btn_container_no_icon">

        <android.support.design.widget.TextInputLayout
            style="@style/btn_text_input_layout"
            android:id="@+id/etCreditCardExpiryLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:labelFor="@+id/etCreditCardExpiry"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">
            <EditText
                style="@style/btn_edit_text_field"
                android:id="@+id/etCreditCardExpiry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/btn_credit_card_expiry"
                android:inputType="number"
                android:maxLength="4"
                android:nextFocusDown="@+id/etCreditCardExpiryYear"
                android:selectAllOnFocus="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/etCreditCardCVCLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:gravity="start"
            android:labelFor="@+id/etCreditCardCVC"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">

            <EditText
                style="@style/btn_edit_text_field"
                android:id="@+id/etCreditCardCVC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:hint="@string/btn_credit_card_cvc_hint"
                android:inputType="number"
                android:maxLength="4"
                android:selectAllOnFocus="true"
                android:textAlignment="gravity"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
