<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/pbBankLoadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="@dimen/pb_loading_size"
            android:layout_height="@dimen/pb_loading_size"
            android:indeterminate="true"/>
    </RelativeLayout>

    <LinearLayout style="@style/btn_container_icon">

        <android.support.design.widget.TextInputLayout
            style="@style/btn_text_input_layout"
            android:id="@+id/etDirectDebitNameLayout"
            android:layout_weight="1"
            android:focusable="false"
            android:labelFor="@+id/etDirectDebitName"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">

            <EditText
                style="@style/btn_edit_text_field"
                android:id="@+id/etDirectDebitName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="false"
                android:focusableInTouchMode="true"
                android:hint="@string/btn_direct_debit_name_hint"
                android:inputType="text"
                android:maxLength="100"
                android:nextFocusForward="@+id/etDirectDebitBSBNumber"
                android:selectAllOnFocus="false"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            style="@style/btn_form_icon"
            android:id="@+id/ivBankIcon"
            android:src="@drawable/ic_bank"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout style="@style/btn_container_no_icon">

        <android.support.design.widget.TextInputLayout
            style="@style/btn_text_input_layout"
            android:id="@+id/etDirectDebitBSBNumberLayout"
            android:labelFor="@+id/etDirectDebitBSBNumber"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">
            <EditText
                style="@style/btn_edit_text_field"
                android:id="@+id/etDirectDebitBSBNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/btn_direct_debit_bsb_number_hint"
                android:inputType="number"
                android:maxLength="6"
                android:nextFocusForward="@+id/etDirectDebitAccountNumber"
                android:selectAllOnFocus="false"/>
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout style="@style/btn_container_no_icon"
                  android:baselineAligned="false">

        <android.support.design.widget.TextInputLayout
            style="@style/btn_text_input_layout"
            android:id="@+id/etDirectDebitAccountNumberLayout"
            android:labelFor="@+id/etDirectDebitAccountNumber"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/btn_error_layout">

            <EditText
                style="@style/btn_edit_text_field"
                android:id="@+id/etDirectDebitAccountNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/btn_direct_debit_account_number_hint"
                android:inputType="number"
                android:maxLength="20"
                android:selectAllOnFocus="false"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>
